# 281-graph-transformer-trading

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
rust_graph_transformer/: Cargo.toml  README.md
rust_graph_transformer/examples/: backtest.rs  build_market_graph.rs  fetch_market_data.rs  graph_attention.rs  live_signals.rs  simple_prediction.rs
rust_graph_transformer/src/: lib.rs
rust_graph_transformer/src/api/: client.rs  mod.rs  types.rs  websocket.rs
rust_graph_transformer/src/backtest/: engine.rs  metrics.rs  mod.rs  report.rs
rust_graph_transformer/src/features/: engine.rs  indicators.rs  mod.rs  node_features.rs
rust_graph_transformer/src/graph/: builder.rs  edge.rs  market_graph.rs  mod.rs  node.rs
rust_graph_transformer/src/strategy/: mod.rs  portfolio.rs  signal.rs
rust_graph_transformer/src/transformer/: attention.rs  config.rs  layer.rs  mod.rs  model.rs  positional.rs
rust_graph_transformer/src/utils/: math.rs  mod.rs  time.rs
